--- a/.beetbox/config.yml
+++ b/.beetbox/config.yml
@@ -8,18 +8,20 @@ ss_account_name: admin
 ss_account_pass: admin
 beet_mysql_user: root
 beet_mysql_password: ""
+
+# PHP 7 config.
+php_version: "7.0"
 php_packages:
-  - php5
-  - libapache2-mod-php5
-  - php5-mcrypt
-  - php5-cli
-  - php5-common
-  - php5-curl
-  - php5-dev
-  - php5-fpm
-  - php5-gd
-  - php5-intl
-  - php5-tidy
-  - php-pear
-  - php-apc
+  - php7.0
+  - libapache2-mod-php7.0
+  - php7.0-cli
+  - php7.0-common
+  - php7.0-curl
+  - php7.0-dev
+  - php7.0-fpm
+  - php7.0-gd
+  - php7.0-json
+  - php7.0-opcache
   - libpcre3-dev
+php_mysql_package: php7.0-mysql
+php_fpm_daemon: php7.0-fpm
